// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsentBanner should correctly render for ltr service 1`] = `
<div>
  <div
    class="Wrapper-sc-7g3fro-0 ehWaHq"
    dir="ltr"
    id="banner-id"
  >
    <div
      class="CenterWrapper-sc-7g3fro-1 ggwfud"
      dir="ltr"
    >
      <h2
        class="Title-sc-7g3fro-2 iqsZpo"
        dir="ltr"
      >
        We've updated our Privacy and Cookies Policy
      </h2>
      <p>
        Hello
      </p>
      <ul
        class="Options-sc-7g3fro-3 jLugbT"
        dir="ltr"
      >
        <li
          class="ListItem-sc-7g3fro-5 iOzCnw"
          dir="ltr"
        >
          <button
            type="button"
          >
            Accept
          </button>
        </li>
        <li
          class="ListItem-sc-7g3fro-5 iOzCnw"
          dir="ltr"
        >
          <a
            href="https://foobar.com"
          >
            Reject
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ConsentBanner should correctly render for rtl service 1`] = `
<div>
  <div
    class="Wrapper-sc-7g3fro-0 fctLCD"
    dir="rtl"
    id="banner-id"
  >
    <div
      class="CenterWrapper-sc-7g3fro-1 ggwfud"
      dir="rtl"
    >
      <h2
        class="Title-sc-7g3fro-2 kcHhsl"
        dir="rtl"
      >
        عنوان
      </h2>
      <p>
        مرحبا
      </p>
      <ul
        class="Options-sc-7g3fro-3 gbuXMf"
        dir="rtl"
      >
        <li
          class="ListItem-sc-7g3fro-5 dCLFkB"
          dir="rtl"
        >
          <button
            type="button"
          >
            قبول
          </button>
        </li>
        <li
          class="ListItem-sc-7g3fro-5 dCLFkB"
          dir="rtl"
        >
          <a
            href="https://foobar.com"
          >
            رفض
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ConsentBanner with hidden attribute on wrapper should correctly render 1`] = `
<div>
  <div
    class="Wrapper-sc-7g3fro-0 ehWaHq"
    dir="ltr"
    hidden=""
    id="banner-id"
  >
    <div
      class="CenterWrapper-sc-7g3fro-1 ggwfud"
      dir="ltr"
    >
      <h2
        class="Title-sc-7g3fro-2 iqsZpo"
        dir="ltr"
      >
        We've updated our Privacy and Cookies Policy
      </h2>
      <p>
        Hello
      </p>
      <ul
        class="Options-sc-7g3fro-3 jLugbT"
        dir="ltr"
      >
        <li
          class="ListItem-sc-7g3fro-5 iOzCnw"
          dir="ltr"
        >
          <button
            type="button"
          >
            Accept
          </button>
        </li>
        <li
          class="ListItem-sc-7g3fro-5 iOzCnw"
          dir="ltr"
        >
          <a
            href="https://foobar.com"
          >
            Reject
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ConsentBannerText should correctly render 1`] = `
<div>
  <p
    class="ConsentBannerText-sc-7g3fro-4 fkYBRU"
    dir="ltr"
  >
    We have made some important changes to our Privacy and Cookies Policy and we want you to know what this means for you and your data.
  </p>
</div>
`;
